test/multiphaseEuler/populationBalance/negativeDrift/postProcessing/probes/0/integerMoment1(N,v).bubbles
# Probe 0 (0.5 0.5 0.5)
# Time        0            
0             0.279433     
0.2           0.273275     
0.4           0.267116     
0.6           0.260957     
0.8           0.254799     
1             0.24864      
1.2           0.242481     
1.4           0.236322     
1.6           0.230163     
1.8           0.224004     
2             0.217845     
2.2           0.211685     
2.4           0.205526     
2.6           0.199367     
2.8           0.193207     
3             0.187047     
3.2           0.180888     
3.4           0.174728     
3.6           0.168568     
3.8           0.162408     
4             0.156247     
